tests/baselines/reference/scannerNumericLiteral2.errors.txt
==== tests/cases/compiler/scannerNumericLiteral2.ts (1 errors) ====
    01
    ~~
!!! scannerNumericLiteral2.ts(1,1): error TS1085: Octal literals are not available when targeting ECMAScript 5 and higher.